[tool.poetry]
name = "laundry-bot"
version = "0.1.0"
description = "Telegram bot для автоматического импорта счетов прачечной в Google Sheets"
authors = ["Denis Belov <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
python-telegram-bot = "20.3"
pdfplumber = "0.9.0"
gspread = "6.2.1"       # версия совместимая с Python 3.13
oauth2client = "4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
